<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".OrgInfoActivity">


    <ImageView
        android:id="@+id/logoSenara"
        android:layout_width="347dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/orginfoGuideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_senara" />


    <TextView
        android:id="@+id/orgInfoHeader"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/org_info_header"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/orginfoGuideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orginfoGuideline1" />

    <TextView
        android:id="@+id/orgInfo"
        android:layout_width="347dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/org_info"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/orginfoGuideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orginfoGuideline2" />

    <TextView
        android:id="@+id/contactInfoHeader"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/contact_info_header"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/orginfoGuideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orginfoGuideline3" />

    <TextView
        android:id="@+id/contactInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/contact_info"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orginfoGuideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/orginfoGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/orginfoGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/orginfoGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/orginfoGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>
